# genai-shopping-assistant

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASING.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml
chatbot/: Dockerfile  pyproject.toml
chatbot/chatbot/: config.py  env.py  product_retrieval.py  types.py
chatbot/chatbot/agent_definitions/: __init__.py  customer_service.py  product_search.py  router.py  shopping_actions.py
chatbot/chatbot/graph/: __init__.py  types.py  utils.py
chatbot/conf/: config.yml
chatbot/lib/: pyproject.toml
chatbot/lib/chatbot/: chat.py  product_retrieval.py
chatbot/pkg/: pyproject.toml
chatbot/pkg/chatbot/: chat.py  config.py  env.py  product_retrieval.py  types.py
chatbot/pkg/chatbot/agent_definitions/: customer_service.py  product_search.py  router.py  shopping_actions.py
chatbot/pkg/chatbot/graph/: graph.py  types.py  utils.py
chatbot/pkg/chatbot/observability/: utils.py
chatbot/pkg/chatbot/tools/: cart_actions.py
chatbot/pkg/notebooks/: test_ecom_api_client.ipynb
chatbot/scripts/: ingest_product_data_into_vectorstore.py
chatbot/service/: app.py  config.yml  requirements.txt
data/: products_extended.csv
ecom-backend/: Dockerfile  README.md  app.py  exceptions.py  requirements.txt
notebooks/: 01_basic_router_agent.ipynb  01_first_notebook.ipynb  02_shopping_actions_agent.ipynb  05_all_agents_workflow.ipynb  config.yml  (+1 more)
playground/: README.md
services/ecom-backend/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml
services/ecom-backend/api/v1/: exception_handlers.py  router.py  schemas.py
services/ecom-backend/core/: config.py  database.py  exceptions.py
services/ecom-backend/data/: ecom_backend_ci.db
services/ecom-backend/docs/diagrams/: db_diagram.dbml
services/ecom-backend/domains/: __init__.py
services/ecom-backend/domains/carts/: models.py  repository.py  schemas.py  service.py
services/ecom-backend/domains/carts/api/: dependencies.py  router.py
services/ecom-backend/domains/products/: models.py  repository.py  schemas.py  service.py
services/ecom-backend/domains/products/api/: dependencies.py  router.py
services/ecom-backend/domains/users/: models.py  repository.py  schemas.py  service.py
services/ecom-backend/domains/users/api/: dependencies.py  router.py
services/ecom-backend/migrations/: env.py
services/ecom-backend/migrations/versions/: 8a3fde54fa59_add_tables.py  e14a2f62b7a3_initial_schema.py  f9c2f0462ab9_add_slug_to_products_tables.py
services/ecom-backend/notebooks/misc/: test_product_api.ipynb
services/ecom-backend/scripts/: add_dummy_data.sql  create_admin_user.py  ingest_product_data.py
services/ecom-backend/tests/api/: test_carts_api.sh  test_products_api.sh  test_users_api.sh
services/shopping-assistant/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  config.yml  pyproject.toml
services/shopping-assistant/.shopping-assistant/config/: config.yml
services/shopping-assistant/scripts/: ingest_product_data_into_vectorstore.py
(+99 files in other folders)
