[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "project"
version = "0.1.0"

requires-python = ">=3.12"
dependencies = [
    "semver"
]

[dependency-groups]
dev = [
    "pre-commit"
]
ci = [
    "pre-commit"
]

[tool.setuptools]
packages = []