[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "project"
version = "0.1.0-dev.0"

requires-python = ">=3.12"
dependencies = [
    "semver",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pre-commit",
]
ci = [
    "pre-commit"
]

[tool.setuptools]
packages = []
