[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "shopping-assistant-monorepo"
version = "0.1.1-dev.0"

requires-python = ">=3.12"
dependencies = ["semver", "tabulate>=0.9.0", "project"]


[tool.uv.sources]
project = { path = "packages/project" }

[dependency-groups]
dev = ["ipython>=9.10.0", "pre-commit"]
ci = ["pre-commit"]

[tool.setuptools]
packages = []
