[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "chatbot"
version = "0.1.0"

requires-python = ">=3.12"

dependencies = [
    "python-dotenv", "langgraph", 
    "openai-agents", "openai", 
    "langchain", "langchain_community",
    "weaviate-client",
    "gradio",
    "langfuse",
    "openinference-instrumentation-openai-agents",
    "logfire"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chatbot*"]