[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ecom-backend-service"
version = "0.1.1"

requires-python = ">=3.12"

dependencies = [
    "sqlalchemy",
    "alembic",
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "uvicorn[standard]",
    "pandas",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = ["pytest", "pytest-cov"]
